--- a/drupal/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/drupal/config/sync/core.entity_form_display.node.blog.default.yml
@@ -40,7 +40,6 @@ third_party_settings:
     group_content_primary:
       children:
         - field_content
-        - field_content_supplementary
       parent_name: ''
       weight: 4
       format_type: fieldset
@@ -110,35 +109,6 @@ content:
           dialog_off_canvas: false
     type: paragraphs
     region: content
-  field_content_supplementary:
-    type: paragraphs
-    weight: 27
-    settings:
-      title: Content
-      title_plural: Content
-      edit_mode: open
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: modal
-      form_display_mode: default
-      default_paragraph_type: _none
-      features:
-        add_above: '0'
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
-    third_party_settings:
-      paragraphs_features:
-        delete_confirmation: true
-        add_in_between: true
-        show_drag_and_drop: true
-        split_text: false
-      paragraphs_ee:
-        paragraphs_ee:
-          dialog_style: tiles
-          easy_access_count: 0
-          dialog_off_canvas: false
-    region: content
   field_description:
     weight: 3
     settings:
@@ -155,7 +125,7 @@ content:
     type: media_library_widget
     region: content
   field_meta_tags:
-    weight: 29
+    weight: 13
     settings:
       sidebar: true
     third_party_settings: {  }
@@ -232,4 +202,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_content_supplementary: true
   field_display_title: true
