--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -17,6 +17,7 @@
     "vue-gravatar": "^1.4.1"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/storybook": "4.1.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "postcss": "8.3.9"
