--- a/drupal/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/drupal/config/sync/core.entity_form_display.node.blog.default.yml
@@ -76,9 +76,13 @@ content:
     third_party_settings: {  }
   field_blog_category:
     weight: 1
-    settings: {  }
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: options_buttons
+    type: entity_reference_autocomplete_tags
     region: content
   field_content:
     weight: 26
