chore: update drupal config

--- a/drupal/config/sync/system.site.yml
+++ b/drupal/config/sync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: c014c208-2bbf-45d1-b9ef-4c7a5f1063b9
-name: Foundry
-mail: info@client-domain.com
+name: 'Stuart Clark CMS'
+mail: stu@rtclark.net
 slogan: ''
 page:
   403: ''
