--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -15,6 +15,7 @@
     "core-js": "3.18.3",
     "daisyui": "^1.16.2",
     "druxt-site": "0.10.1",
+    "ellipsize": "^0.2.0",
     "nuxt": "2.15.8",
     "vue-gravatar": "^1.4.1"
   },
