--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "deploy": "nuxt generate && npx netlify-cli deploy -d ./dist",
+    "deploy": "npx netlify-cli deploy -d ./dist",
     "dev": "nuxt",
     "generate": "nuxt generate",
     "start": "nuxt start",
