--- a/drupal/config/sync/user.role.author.yml
+++ b/drupal/config/sync/user.role.author.yml
@@ -30,6 +30,7 @@ permissions:
   - 'create paragraph content link'
   - 'create paragraph content listing'
   - 'create paragraph content media'
+  - 'create paragraph content repository'
   - 'create paragraph content section'
   - 'create paragraph content text_formatted'
   - 'create paragraph content text_markdown'
@@ -44,6 +45,7 @@ permissions:
   - 'delete paragraph content link'
   - 'delete paragraph content listing'
   - 'delete paragraph content media'
+  - 'delete paragraph content repository'
   - 'delete paragraph content section'
   - 'delete paragraph content text_formatted'
   - 'delete paragraph content text_markdown'
@@ -78,6 +80,7 @@ permissions:
   - 'update paragraph content link'
   - 'update paragraph content listing'
   - 'update paragraph content media'
+  - 'update paragraph content repository'
   - 'update paragraph content section'
   - 'update paragraph content text_formatted'
   - 'update paragraph content text_markdown'
