--- a/drupal/config/sync/user.role.anonymous.yml
+++ b/drupal/config/sync/user.role.anonymous.yml
@@ -24,6 +24,7 @@ permissions:
   - 'view paragraph content link_internal'
   - 'view paragraph content listing'
   - 'view paragraph content media'
+  - 'view paragraph content repository'
   - 'view paragraph content section'
   - 'view paragraph content text_formatted'
   - 'view paragraph content text_markdown'
