--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -85,7 +85,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": false
+        }
     },
     "scripts": {
         "post-create-project-cmd": ""
