--- a/drupal/config/sync/field.field.config_pages.druxt_settings.field_social_gravatar.yml
+++ b/drupal/config/sync/field.field.config_pages.druxt_settings.field_social_gravatar.yml
@@ -1,16 +1,16 @@
-uuid: 5bc6b69e-96d5-4704-b291-83774e9486d2
+uuid: bbcd2cf5-bec9-4c41-8483-40312c682d2d
 langcode: en
 status: true
 dependencies:
   config:
     - config_pages.type.druxt_settings
-    - field.storage.config_pages.field_social_drupal
-id: config_pages.druxt_settings.field_social_drupal
-field_name: field_social_drupal
+    - field.storage.config_pages.field_social_gravatar
+id: config_pages.druxt_settings.field_social_gravatar
+field_name: field_social_gravatar
 entity_type: config_pages
 bundle: druxt_settings
-label: Drupal.org
-description: 'Drupal.org username'
+label: Gravatar
+description: 'Gravatar user hash'
 required: false
 translatable: false
 default_value: {  }
