--- a/drupal/config/sync/metatag.metatag_defaults.front.yml
+++ b/drupal/config/sync/metatag.metatag_defaults.front.yml
@@ -6,6 +6,4 @@ _core:
   default_config_hash: 1noCXlegCr5HFehQRF1ViXy1jhU1jZ_sNN99a8Sj5jo
 id: front
 label: 'Front page'
-tags:
-  canonical_url: '[site:url]'
-  shortlink: '[site:url]'
+tags: {  }
