--- a/drupal/config/sync/system.site.yml
+++ b/drupal/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: c014c208-2bbf-45d1-b9ef-4c7a5f1063b9
-name: 'Stuart Clark CMS'
+name: 'Stuart Clark'
 mail: stu@rtclark.net
 slogan: ''
 page:
