--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
-      - master
+      - develop
   pull_request:
     branches:
       - main
-      - master
+      - develop
 
 jobs:
   ci:
@@ -23,28 +23,38 @@ jobs:
       - name: Checkout 🛎
         uses: actions/checkout@master
 
-      - run: cd nuxt
       - name: Setup node env 🏗
         uses: actions/setup-node@v2.1.5
         with:
           node-version: ${{ matrix.node }}
           check-latest: true
 
-      # - name: Get yarn cache directory path 🛠
-      #   id: yarn-cache-dir-path
-      #   run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Get yarn cache directory path 🛠
+        id: yarn-cache-dir-path
+        run: cd nuxt && echo "::set-output name=dir::$(yarn cache dir)"
 
-      # - name: Cache node_modules 📦
-      #   uses: actions/cache@v2.1.4
-      #   id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-      #   with:
-      #     path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-      #     key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-yarn-
+      - name: Cache node_modules 📦
+        uses: actions/cache@v2.1.4
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install dependencies 👨🏻‍💻
-        run: yarn
+        run: cd nuxt && yarn
 
-      # - name: Run tests 🧪
-      #   run: yarn test
+      - name: Run linting 🔎
+        run: cd nuxt && yarn lint
+
+      - name: Run tests 🧪
+        run: cd nuxt && yarn test
+
+      - uses: codecov/codecov-action@v2
+        with:
+          files: ./nuxt/coverage/clover.xml
+          name: codecov-umbrella
+          fail_ci_if_error: true
+          verbose: true
+
