--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -35,6 +35,8 @@
     "@babel/eslint-parser": "^7.16.5",
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
+    "@cypress/vue": "^2.2.3",
+    "@cypress/webpack-dev-server": "^1.8.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/moment": "^1.6.1",
@@ -44,10 +46,12 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.5",
+    "cypress": "^9.2.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "html-webpack-plugin": "4",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.4",
