--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "cy:run": "cypress run",
     "deploy": "npx netlify-cli deploy -d ./dist",
     "dev": "nuxt",
     "generate": "nuxt generate",
@@ -13,9 +14,15 @@
     "lint": "yarn lint:js && yarn lint:style && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix",
     "prepare": "cd .. && husky install nuxt/.husky",
+    "serve": "yarn generate && yarn start",
     "start": "nuxt start",
     "storybook": "nuxt storybook",
-    "test": "jest"
+    "test:cy": "start-server-and-test serve http://localhost:3000 cy:run",
+    "test:jest": "jest",
+    "test": "yarn test:jest && yarn test:cy"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   },
   "lint-staged": {
     "*.{js,vue}": "eslint --cache",
@@ -35,6 +42,8 @@
     "@babel/eslint-parser": "^7.16.5",
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
+    "@cypress/vue": "^2.2.3",
+    "@cypress/webpack-dev-server": "^1.8.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/moment": "^1.6.1",
@@ -44,20 +53,25 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.5",
+    "cypress": "^9.2.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "html-webpack-plugin": "4",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.4",
     "postcss": "8.3.9",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
+    "start-server-and-test": "^1.14.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "vue-jest": "^3.0.7"
+    "vue-jest": "^3.0.7",
+    "webpack-dev-server": "^4.7.2"
   }
 }
