--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -16,6 +16,7 @@
     "prepare": "cd .. && husky install nuxt/.husky",
     "serve": "yarn generate && yarn start",
     "start": "nuxt start",
+    "storybook:build": "nuxt storybook build",
     "storybook": "nuxt storybook",
     "test:cy": "start-server-and-test serve http://localhost:3000 cy:run",
     "test:jest": "jest",
@@ -50,7 +51,9 @@
     "@nuxtjs/storybook": "^4.2.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@storybook/addon-storyshots": "^6.4.9",
     "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^27.0.0-alpha.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.5",
     "cypress": "^9.2.0",
@@ -61,6 +64,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "html-webpack-plugin": "4",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.4",
     "postcss": "8.3.9",
@@ -71,7 +75,6 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "vue-jest": "^3.0.7",
     "webpack-dev-server": "^4.7.2"
   }
 }
