--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - uses: jonaseberle/github-action-setup-ddev@v1
+      - name: Setup ddev
+        uses: jonaseberle/github-action-setup-ddev@v1
         with:
           autostart: false
-      - run: cd drupal && ddev start
-      - run: cd drupal && ddev install
+      - name: Start ddev
+        run: cd drupal && ddev start
 
-      - name: Install dependencies 👨🏻‍💻
+      - name: Install Drupal 👨🏻‍💻
+        run: cd drupal && ddev install
+
+      - name: Install Nuxt.js 👨🏻‍💻
         run: cd nuxt && yarn
 
       - name: Run linting 🔎
@@ -56,6 +60,9 @@ jobs:
 
       - name: Run Jest tests 🧪
         run: cd nuxt && yarn test:jest
+
+      - name: Run Cypress tests 🧪
+        run: cd nuxt && yarn test:cy
 
       - uses: codecov/codecov-action@v2
         with:
