--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,9 @@ jobs:
         run: cd nuxt && yarn test:jest
 
       - name: Run Cypress tests 🧪
-        run: cd nuxt && NODE_TLS_REJECT_UNAUTHORIZED=0 yarn test:cy
+        run: cd nuxt && NODE_TLS_REJECT_UNAUTHORIZED=0 yarn test:cy -- --key ${{ secrets.CYPRESS_RECORD_KEY }}
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
       - uses: actions/upload-artifact@v2
         if: failure()
         with:
