--- a/drupal/config/sync/user.role.anonymous.yml
+++ b/drupal/config/sync/user.role.anonymous.yml
@@ -30,6 +30,7 @@ permissions:
   - 'view paragraph content link'
   - 'view paragraph content listing'
   - 'view paragraph content media'
+  - 'view paragraph content repository'
   - 'view paragraph content section'
   - 'view paragraph content text_formatted'
   - 'view paragraph content text_markdown'
