--- a/drupal/config/sync/views.view.article.yml
+++ b/drupal/config/sync/views.view.article.yml
@@ -1,6 +1,6 @@
 uuid: 14bbe63f-7623-4992-9678-56849edcd756
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
