--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -46,6 +46,7 @@
     "@cypress/webpack-dev-server": "^1.8.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/storybook": "^4.2.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
