--- a/drupal/config/sync/core.entity_view_display.node.article.full.yml
+++ b/drupal/config/sync/core.entity_view_display.node.article.full.yml
@@ -17,6 +17,7 @@ dependencies:
     - node.type.article
   module:
     - entity_reference_revisions
+    - layout_paragraphs
     - title_field_for_manage_display
     - user
 id: node.article.full
@@ -33,7 +34,7 @@ content:
     weight: 4
     region: content
   field_content:
-    type: entity_reference_revisions_entity_view
+    type: layout_paragraphs
     label: hidden
     settings:
       view_mode: default
