--- a/drupal/config/sync/user.role.author.yml
+++ b/drupal/config/sync/user.role.author.yml
@@ -52,6 +52,7 @@ permissions:
   - 'create page content'
   - 'create paragraph content card'
   - 'create paragraph content card_group'
+  - 'create paragraph content code'
   - 'create paragraph content entity_reference'
   - 'create paragraph content jumbotron'
   - 'create paragraph content link'
@@ -64,6 +65,7 @@ permissions:
   - 'create video media'
   - 'delete paragraph content card'
   - 'delete paragraph content card_group'
+  - 'delete paragraph content code'
   - 'delete paragraph content entity_reference'
   - 'delete paragraph content jumbotron'
   - 'delete paragraph content link'
@@ -94,6 +96,7 @@ permissions:
   - 'update content translations'
   - 'update paragraph content card'
   - 'update paragraph content card_group'
+  - 'update paragraph content code'
   - 'update paragraph content entity_reference'
   - 'update paragraph content jumbotron'
   - 'update paragraph content link'
