--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "3.18.3",
     "daisyui": "^1.16.2",
+    "druxt-layout-paragraphs": "^0.1.0",
     "druxt-site": "^0.11.0",
     "ellipsize": "^0.2.0",
     "nuxt": "2.15.8",
