--- a/drupal/config/sync/pathauto.pattern.type_title_date.yml
+++ b/drupal/config/sync/pathauto.pattern.type_title_date.yml
@@ -5,14 +5,14 @@ dependencies:
   module:
     - node
 id: type_title_date
-label: content-type/title-date
+label: content-types/title-date
 type: 'canonical_entities:node'
-pattern: '[node:content-type]/[node:title]-[node:created:custom:Ymd]'
+pattern: '[node:content-type]s/[node:title]-[node:created:custom:Ymd]'
 selection_criteria:
-  aa57e4fa-b821-4360-a10d-05bdee8316b6:
+  450295b6-675c-4150-b470-7089aa19733f:
     id: node_type
     negate: false
-    uuid: aa57e4fa-b821-4360-a10d-05bdee8316b6
+    uuid: 450295b6-675c-4150-b470-7089aa19733f
     context_mapping:
       node: node
     bundles:
