--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -45,6 +45,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@cypress/vue": "^2.2.3",
     "@cypress/webpack-dev-server": "^1.8.0",
+    "@nuxt/image": "^0.6.2",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/markdownit": "^2.0.0",
