--- a/drupal/config/sync/core.entity_form_display.paragraph.code.default.yml
+++ b/drupal/config/sync/core.entity_form_display.paragraph.code.default.yml
@@ -4,8 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.code.field_code
+    - field.field.paragraph.code.field_description
     - field.field.paragraph.code.field_title
     - paragraphs.paragraphs_type.code
+  module:
+    - text
 id: paragraph.code.default
 targetEntityType: paragraph
 bundle: code
@@ -13,7 +16,15 @@ mode: default
 content:
   field_code:
     type: string_textarea
-    weight: 1
+    weight: 2
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_description:
+    type: text_textarea
+    weight: 0
     region: content
     settings:
       rows: 5
@@ -21,7 +32,7 @@ content:
     third_party_settings: {  }
   field_title:
     type: string_textfield
-    weight: 0
+    weight: 1
     region: content
     settings:
       size: 60
