--- a/drupal/config/sync/core.entity_view_display.media.image.default.yml
+++ b/drupal/config/sync/core.entity_view_display.media.image.default.yml
@@ -13,19 +13,11 @@ dependencies:
     - media.type.image
   module:
     - image
-    - text
 id: media.image.default
 targetEntityType: media
 bundle: image
 mode: default
 content:
-  field_media_caption:
-    type: text_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
   field_media_image:
     type: image
     label: hidden
@@ -37,6 +29,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_caption: true
   field_media_content_owner: true
   field_media_copyright: true
   field_media_description: true
