chore(#60): replace custom store with config pages

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -30,6 +30,7 @@
     "*.**": "prettier --check --ignore-unknown"
   },
   "dependencies": {
+    "@druxt-contrib/config-pages": "^0.1.1",
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "3.18.3",
     "daisyui": "^1.16.2",
