--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@druxt-contrib/config-pages": "^0.1.1",
+    "@nuxtjs/feed": "^2.0.0",
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "3.21.1",
     "daisyui": "^1.25.4",
