feat(#63): add a-frame paragraph

--- a/drupal/config/sync/user.role.anonymous.yml
+++ b/drupal/config/sync/user.role.anonymous.yml
@@ -23,6 +23,7 @@ permissions:
   - 'view druxt_settings config page entity'
   - 'view linky entities'
   - 'view media'
+  - 'view paragraph content aframe_scene'
   - 'view paragraph content card'
   - 'view paragraph content card_group'
   - 'view paragraph content code'
