--- a/drupal/config/sync/user.role.author.yml
+++ b/drupal/config/sync/user.role.author.yml
@@ -50,6 +50,7 @@ permissions:
   - 'create event content'
   - 'create image media'
   - 'create page content'
+  - 'create paragraph content aframe_scene'
   - 'create paragraph content card'
   - 'create paragraph content card_group'
   - 'create paragraph content code'
@@ -63,6 +64,7 @@ permissions:
   - 'create paragraph content text_markdown'
   - 'create terms in article_category'
   - 'create video media'
+  - 'delete paragraph content aframe_scene'
   - 'delete paragraph content card'
   - 'delete paragraph content card_group'
   - 'delete paragraph content code'
@@ -94,6 +96,7 @@ permissions:
   - 'translate event node'
   - 'translate page node'
   - 'update content translations'
+  - 'update paragraph content aframe_scene'
   - 'update paragraph content card'
   - 'update paragraph content card_group'
   - 'update paragraph content code'
