--- a/drupal/config/sync/field.field.node.article.field_content.yml
+++ b/drupal/config/sync/field.field.node.article.field_content.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_content
     - node.type.article
+    - paragraphs.paragraphs_type.aframe_scene
     - paragraphs.paragraphs_type.card
     - paragraphs.paragraphs_type.card_group
     - paragraphs.paragraphs_type.code
@@ -37,10 +38,14 @@ settings:
       link: link
       media: media
       section: section
+      aframe_scene: aframe_scene
       code: code
       repository: repository
     negate: 0
     target_bundles_drag_drop:
+      aframe_scene:
+        weight: 14
+        enabled: true
       card:
         weight: -20
         enabled: true
