--- a/drupal/config/sync/field.field.paragraph.media.field_media.yml
+++ b/drupal/config/sync/field.field.paragraph.media.field_media.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.paragraph.field_media
     - media.type.document
     - media.type.image
+    - media.type.sphere
     - media.type.video
     - paragraphs.paragraphs_type.media
 id: paragraph.media.field_media
@@ -24,6 +25,7 @@ settings:
     target_bundles:
       document: document
       image: image
+      sphere: sphere
       video: video
     sort:
       field: _none
