--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -39,7 +39,8 @@
     "druxt-site": "^0.11.1",
     "ellipsize": "^0.5.1",
     "nuxt": "2.15.8",
-    "vue-gravatar": "^1.4.1"
+    "vue-gravatar": "^1.4.1",
+    "vue-gtag": "^1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
