--- a/drupal/config/sync/core.entity_form_display.paragraph.repository.default.yml
+++ b/drupal/config/sync/core.entity_form_display.paragraph.repository.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.repository.field_description
+    - field.field.paragraph.repository.field_github_template
     - field.field.paragraph.repository.field_gitpod
     - field.field.paragraph.repository.field_url
     - paragraphs.paragraphs_type.repository
@@ -16,28 +17,35 @@ bundle: repository
 mode: default
 content:
   field_description:
+    type: text_textarea
     weight: 0
+    region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea
+  field_github_template:
+    type: boolean_checkbox
+    weight: 3
     region: content
-  field_gitpod:
-    weight: 2
     settings:
       display_label: true
     third_party_settings: {  }
+  field_gitpod:
     type: boolean_checkbox
+    weight: 2
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_url:
+    type: link_default
     weight: 1
+    region: content
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
-    type: link_default
-    region: content
 hidden:
   created: true
   status: true
