--- a/drupal/config/sync/core.entity_view_display.paragraph.repository.default.yml
+++ b/drupal/config/sync/core.entity_view_display.paragraph.repository.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.repository.field_description
+    - field.field.paragraph.repository.field_github_template
     - field.field.paragraph.repository.field_gitpod
     - field.field.paragraph.repository.field_url
     - paragraphs.paragraphs_type.repository
@@ -16,24 +17,34 @@ bundle: repository
 mode: default
 content:
   field_description:
-    weight: 0
+    type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: text_default
+    weight: 0
+    region: content
+  field_github_template:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 3
     region: content
   field_gitpod:
-    weight: 2
+    type: boolean
     label: hidden
     settings:
       format: default
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    type: boolean
+    weight: 2
     region: content
   field_url:
-    weight: 1
+    type: link
     label: hidden
     settings:
       trim_length: 80
@@ -42,6 +53,6 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    type: link
+    weight: 1
     region: content
 hidden: {  }
