--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -39,6 +39,7 @@ module:
   decoupled_router: 0
   diff: 0
   druxt: 0
+  druxt_node_preview: 0
   dynamic_entity_reference: 0
   dynamic_page_cache: 0
   editor: 0
