--- a/drupal/config/sync/paragraphs.paragraphs_type.code.yml
+++ b/drupal/config/sync/paragraphs.paragraphs_type.code.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - entity_display_mode
+    - layout_paragraphs
     - paragraphs_ee
     - paragraphs_library
 third_party_settings:
@@ -20,4 +21,7 @@ label: Code
 icon_uuid: null
 icon_default: null
 description: ''
-behavior_plugins: {  }
+behavior_plugins:
+  layout_paragraphs:
+    enabled: false
+    available_layouts: {  }
