--- a/drupal/config/sync/field.field.media.image.field_media_description.yml
+++ b/drupal/config/sync/field.field.media.image.field_media_description.yml
@@ -11,7 +11,7 @@ entity_type: media
 bundle: image
 label: Description
 description: 'Enter a very short description to help editors find relevant media.'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
