--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -35,8 +35,8 @@
     "@tailwindcss/typography": "^0.4",
     "core-js": "3.22.7",
     "daisyui": "^1.25.4",
-    "druxt-layout-paragraphs": "^0.2.2",
-    "druxt-site": "^0.12.0",
+    "druxt-layout-paragraphs": "0.3.0",
+    "druxt-site": "0.13.0",
     "ellipsize": "^0.5.1",
     "nuxt": "2.15.8",
     "vue-gravatar": "^1.4.1",
