--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -40,7 +40,9 @@
     "ellipsize": "^0.5.1",
     "nuxt": "2.15.8",
     "vue-gravatar": "^1.4.1",
-    "vue-gtag": "^1"
+    "vue-gtag": "^1",
+    "vue-server-renderer": "2.7.13",
+    "vue-template-compiler": "2.7.13"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
